src/test/deca/context/invalid/provided/WrongType.deca
// DESCRIPTION: Type annocé et type d'initialisation différents
//RESULTAT: Incompatible types ! (3.28)
{
    int a = 4.2;
}
